<resources>
    <string name="app_name">MyLoginApp</string>
    <string name="not_a_user_login">Not A User? Sign Up</string>
    <string name="login_with_aau">Login with AAU</string>
    <string name="login">Login</string>
    <string name="type_your_password">Type your password</string>
    <string name="type_your_username">Type your username</string>
    <string name="login1">Login</string>
    <string name="already_a_user_login">Already a User? Login</string>
    <string name="sign_up_with_aau">Sign up with AAU</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up2">Sign Up</string>
    <string name="home_page">Home Page</string>
    <string name="home">Home</string>
    <string name="tokens">Tokens</string>
    <string name="tokendistribution">TokenDistribution</string>
    <string name="title_activity_navigation_drawer">navigation_drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="User_rights_page_title">User Rights</string>

    <string name="redeem_drink">Redeem drink</string>


    <string name="updated_user">Updated User:</string>
    <string name="role">Role:</string>
    <string name="Recipient">Recepient:</string>
    <string name="tokenInt">Tokens:</string>

    <string name="distribution_text_standard">0 tokens</string>

    <string name="distribution_button_text"> Distribute</string>

    <string-array name="user_roles" >
        <item> User </item>
        <item> Responsible </item>
        <item> Director </item>
    </string-array>


</resources>