<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/img"
    tools:context=".LoginPage">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="25dp"
        android:background="@drawable/custom_edittext">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login1"
                android:id="@+id/loginText"
                android:textSize="45sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/username"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/type_your_username"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/type_your_password"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="10dp"/>
            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="-5dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius = "30dp"/>
            <Button
                android:id="@+id/notAUserButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple"
                android:text="@string/not_a_user_login"
                android:layout_marginTop = "-5dp"
                android:textSize="15sp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/loginButtonAAU"
                android:text="@string/login_with_aau"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:textSize="15sp"
                android:layout_marginTop="-5dp"
                android:backgroundTint="@color/grey"
                app:cornerRadius = "30dp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
