<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/img"
    tools:context=".signupPage">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="20dp"
            android:background="@drawable/custom_edittext">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="24dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sign_up2"
                    android:id="@+id/loginText"
                    android:textSize="45sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
    
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/username"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/ic_baseline_person_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/username"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:layout_marginTop="40dp"
                    android:autofillHints="string"
                    android:inputType="text" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/password"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:padding="8dp"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:layout_marginTop="10dp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/signupButton"
                    android:text="@string/sign_up"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/purple"
                    app:cornerRadius = "30dp"/>
                <Button
                    android:id="@+id/alreadyUserButton"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple"
                    android:text="Already a User? Login"
                    android:layout_marginTop = "-5dp"
                    android:textSize="15sp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/SignUpButtonAAU"
                    android:text="@string/sign_up_with_aau"
                    android:drawableLeft="@drawable/ic_baseline_person_24"
                    android:textSize="15sp"
                    android:layout_marginTop="-5dp"
                    android:backgroundTint="@color/grey"
                    app:cornerRadius = "30dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
